fix broken padding in hero component on small screens

--- a/styles/components.css
+++ b/styles/components.css
@@ -59,6 +59,8 @@
   position: relative;
   margin-top: auto;
   margin-bottom: auto;
+  padding-top: var(--tile);
+  padding-bottom: var(--tile);
 
   h1 {
     + .breakdown {
